Bugfixes and optimization
